[package]
name = "hdr_merge_webapp_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-multipart = "0.6.0"
actix-files = "0.6.2"
futures = "0.3.28"
tokio = { version = "1.28.1", features = ["full"] }
uuid = { version = "1.3.2", features = ["v4"] }
tempfile = "3.5.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

[[bin]]
name = "hdr_merge_webapp_backend"
path = "src/main.rs"
